plugins {
    id 'java'
    id 'checkstyle'
    id "org.sonarqube" version "3.4.0.2513"
}

jar {
    archiveBaseName = 'svydovets-bring'
}

version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'

ext {
    junitVersion = '5.8.2'
    reflections = '0.10.2'
    lombok = '1.18.24'
    commonsLang3 = '3.12.0'
    checkstyle = '10.3.1'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation "org.reflections:reflections:${reflections}"
    implementation "org.projectlombok:lombok:${lombok}"
    implementation "org.apache.commons:commons-lang3:${commonsLang3}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitVersion}"
}

checkstyle {
    toolVersion "${checkstyle}"
    configFile(file("config/checkstyle/checkstyle.xml"))
    ignoreFailures = false
    maxWarnings = 0
}

checkstyleMain {
    enabled = gradle.startParameter.taskNames.contains('checkstyleMain')
    source = 'src/main/java'
}

checkstyleTest {
    enabled = gradle.startParameter.taskNames.contains('checkstyleTest')
    source = 'src/test/java'
}

sonarqube {
    properties {
        property "sonar.projectKey", "maingroon_svydovets-bring"
        property "sonar.organization", "maingroon"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
